[tool.poetry]
name = "test_getoptimalnewcameramatrix"
version = "0.1.0"
description = ""
authors = ["Yuki Yoshikawa <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2.0"
pathlib = "^1.0.1"
toml = "^0.10.1"
scipy = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
